# huft

./: .gitignore  CMakeLists.txt  README.md
src/: a.out  huffman.c  huffman.h  main.c  main.cpp
